updated search experience styles

--- a/findly-builder/src/app/components/search-experience/search-experience.component.html
+++ b/findly-builder/src/app/components/search-experience/search-experience.component.html
@@ -409,7 +409,7 @@
                                     <div class="fill-colors-block mr-4 ml-4">
                                         <div class="fill-color">
                                             <div class="label-color">Text Color</div>
-                                            <div class="box-color" [ngClass]="{'color-pallet-container interaction-color': msgColor}" (mouseover)="toggle6=true;msgColor=true;closeAllBoxs('toggle6');">
+                                            <div class="box-color adjust-left" [ngClass]="{'color-pallet-container interaction-color': msgColor}" (mouseover)="toggle6=true;msgColor=true;closeAllBoxs('toggle6');">
                                                 <input
                                                     [style.background]="color6"
                                                     [(colorPicker)]="color6"
@@ -442,7 +442,7 @@
                                     <div class="fill-colors-block" *ngIf="searchObject.searchExperienceConfig.searchBarPosition == 'bottom'">
                                         <div class="fill-color">
                                             <div class="label-color">Fill Color</div>
-                                            <div class="box-color" [ngClass]="{'color-pallet-container interaction-color': bgColor}" (mouseover)="toggle7=true;bgColor=true;closeAllBoxs('toggle7');">
+                                            <div class="box-color adjust-right" [ngClass]="{'color-pallet-container interaction-color': bgColor}" (mouseover)="toggle7=true;bgColor=true;closeAllBoxs('toggle7');">
                                                 <input
                                                     [style.background]="color7"
                                                     [(colorPicker)]="color7"
