--- a/findly-builder/src/app/components/search-experience/search-experience.component.scss
+++ b/findly-builder/src/app/components/search-experience/search-experience.component.scss
@@ -824,6 +824,7 @@
                                         height: 22px;
                                         cursor: pointer;
                                         margin: 0 auto;
+                                        display: block;
                                         input{
                                             width: 100%;
                                             border: 0 !important;
