--- a/findly-builder/src/app/components/search-experience/search-experience.component.html
+++ b/findly-builder/src/app/components/search-experience/search-experience.component.html
@@ -480,15 +480,15 @@
                         <div class="default-status" [ngStyle]="{'padding':searchObject.searchExperienceConfig.searchBarPosition == 'bottom'?'20':0,'border-top':searchObject.searchExperienceConfig.searchBarPosition == 'bottom'?'1':'0'}">
                             <div class="default-status-title" *ngIf="searchObject.searchExperienceConfig.searchBarPosition == 'bottom'">Default Status</div>
                             <div class="kr-sg-radiobutton w-100" *ngIf="searchObject.searchExperienceConfig.searchBarPosition == 'bottom'">
-                                <input id="radio-01" name="radio" class="radio-custom" type="radio" checked>
+                                <input id="radio-01" name="radio" class="radio-custom" type="radio" [(ngModel)]="searchObject.searchInteractionsConfig.defaultStatus" value="searchBar" [checked]="searchObject.searchInteractionsConfig.defaultStatus">
                                 <label for="radio-01" class="radio-custom-label">Search Bar</label>
                             </div> 
 
                             <ng-container>
                                 <div class="col-12 preview-search-ex" style="pointer-events: none;">
                                     <div class="search-widget-if-bottom-up" *ngIf="searchObject.searchExperienceConfig.searchBarPosition == 'bottom'">                               
-                                        <div class="greeting-block">
-                                            <img [src]="emojiIcon">
+                                        <div class="greeting-block" [ngStyle]="{'background':searchObject.searchInteractionsConfig.welcomeMsgFillColor}">
+                                            <!-- <img [src]="emojiIcon"> -->
                                             <span class="greeting-title" [ngStyle]="{'color':searchObject.searchInteractionsConfig.welcomeMsgColor}">{{searchObject.searchInteractionsConfig.welcomeMsg}}</span>
                                         </div>
                                         <div class="d-flex search-customization-input">
@@ -535,13 +535,13 @@
                                 </div>
                             </ng-container>
                             <div class="kr-sg-radiobutton w-100 mt-2" *ngIf="searchObject.searchExperienceConfig.searchBarPosition == 'bottom'">
-                                <input id="radio-211" name="radio" class="radio-custom" type="radio">
+                                <input id="radio-211" name="radio" class="radio-custom" type="radio" [(ngModel)]="searchObject.searchInteractionsConfig.defaultStatus" value="avatar" [checked]="searchObject.searchInteractionsConfig.defaultStatus">
                                 <label for="radio-211" class="radio-custom-label">Avatar</label>
                             </div> 
 
                             <ng-container *ngIf="searchObject.searchExperienceConfig.searchBarPosition == 'bottom'">
                                 <div class="avatar-with-greeting-text">
-                                    <div class="greeting-message-avatar">Good morning! How can I help you today?</div>
+                                    <div class="greeting-message-avatar" [ngStyle]="{'background':searchObject.searchInteractionsConfig.welcomeMsgFillColor,'color':searchObject.searchInteractionsConfig.welcomeMsgColor}">{{searchObject.searchInteractionsConfig.welcomeMsg}}</div>
                                     <div class="avatar-img">
                                         <img src="assets/icons/search-interface/avatar-sdk.svg">
                                     </div>
