--- a/findly-builder/src/app/components/search-experience/search-experience.component.scss
+++ b/findly-builder/src/app/components/search-experience/search-experience.component.scss
@@ -979,7 +979,7 @@
                                     content: "";
                                     position: absolute;
                                     width: 14px;
-                                    height: 14px;
+                                    //height: 14px;
                                     background: #F8F9FA;
                                     transform: rotate(45deg);
                                     bottom: -8px;
@@ -1003,7 +1003,7 @@
                         .greeting-block{
                             background: #F8F9FA;
                             border: 1px solid #E0E1E9;
-                            filter: drop-shadow(0px 0px 11px rgba(0, 0, 0, 0.11));
+                            //filter: drop-shadow(0px 0px 11px rgba(0, 0, 0, 0.11));
                             box-sizing: border-box;
                             border-radius: 8px;
                             padding: 11px;
