--- a/findly-builder/src/app/components/search-experience/search-experience.component.html
+++ b/findly-builder/src/app/components/search-experience/search-experience.component.html
@@ -371,7 +371,7 @@
                         <div class="greeting-message border-with-padding border-0 pb-0 pt-0">
                             <div class="kr-sg-input-text-area w-auto">
                                 <div class="label-text">{{'searchexperience.customize_launch' | translate}}</div>
-                                <textarea class="input-text" maxlength="60" #box (keyup)="0" [(ngModel)]="searchObject.searchInteractionsConfig.welcomeMsg" [ngStyle]="{'color':searchObject.searchInteractionsConfig.welcomeMsgColor}"></textarea>
+                                <textarea class="input-text" maxlength="60" #box (keyup)="0" [(ngModel)]="searchObject.searchInteractionsConfig.welcomeMsg" [ngStyle]="{'color':searchObject.searchInteractionsConfig.welcomeMsgColor}" (change)="testInputLength($event)" (keyup)="testInputLength($event)" (paste)="testLength($event)"></textarea>
                                 <div class="count-length">{{box.value.length}} / {{'searchexperience.60' | translate}} characters</div>
                                 <div class="emoji-img">
                                     <div class="kr-sg-dropdowns" ngbDropdown [placement]="'right-top'" id="avatarDropdown">
@@ -385,7 +385,7 @@
                                                        <img src="assets/icons/search-experience/emojis/close.svg">
                                                    </div>
                                                    <perfect-scrollbar>
-                                                    <emoji-mart [isNative]="false" set="google" [virtualize]="false" [showPreview]="false" [enableSearch]="false" [totalFrequentLines]="19" include=[people] [showSingleCategory]="false" (emojiClick)="addEmoji($event)" [i18n]="configEmoji"></emoji-mart>      
+                                                    <!-- <emoji-mart [isNative]="false" set="google" [virtualize]="false" [showPreview]="false" [enableSearch]="false" [totalFrequentLines]="19" include=[people] [showSingleCategory]="false" (emojiClick)="addEmoji($event)" [i18n]="configEmoji"></emoji-mart>       -->
                                                    </perfect-scrollbar>
                                                    
                                                     <!-- <li class="emoji-type" *ngFor="let emoji of emojiList">
