Commenting the Emoji

--- a/findly-builder/src/app/components/search-experience/search-experience.component.html
+++ b/findly-builder/src/app/components/search-experience/search-experience.component.html
@@ -385,7 +385,7 @@
                                                        <img src="assets/icons/search-experience/emojis/close.svg">
                                                    </div>
                                                    <perfect-scrollbar>
-                                                    <emoji-mart [isNative]="false" set="google" [virtualize]="false" [showPreview]="false" [enableSearch]="false" [totalFrequentLines]="19" include=[people] [showSingleCategory]="false" (emojiClick)="addEmoji($event)" [i18n]="configEmoji"></emoji-mart>      
+                                                    <!-- <emoji-mart [isNative]="false" set="google" [virtualize]="false" [showPreview]="false" [enableSearch]="false" [totalFrequentLines]="19" include=[people] [showSingleCategory]="false" (emojiClick)="addEmoji($event)" [i18n]="configEmoji"></emoji-mart>       -->
                                                    </perfect-scrollbar>
                                                    
                                                     <!-- <li class="emoji-type" *ngFor="let emoji of emojiList">
