--- a/findly-builder/src/app/components/apps-home/apps-home.html
+++ b/findly-builder/src/app/components/apps-home/apps-home.html
@@ -144,19 +144,101 @@
                   <div class="user-name">Abhilasha Tripathi</div>
                 </div>             
               </div> -->
-              <div class="carousel" >
-                <div class="slide">
-                  <div class="box1"> This text is the content of the box. We have added a 50px padding, 20px margin and a 15px green border. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.</div>
+              <ng-container>
+                <div class="m-title col-12">Explore</div>
+                <div id="demo" class="carousel slide explore-carousel-data" data-interval="false" data-ride="carousel">    
+                  <div class="carousel-inner">
+                    <div class="carousel-item active">
+                        <div class="row row-carousels">
+                          <div class="coursel-cards-data col-4">
+                            <div class="inner-c-data data-integration">
+                              <div class="img-block">
+                                <img src="assets/icons/content/carousel-data-inte.svg">
+                              </div>
+                              <div class="title">Data Ingestion</div>
+                              <div class="desc_text">Data is fetched from various sources and ingested into the application for accurate search results</div>
+                              <div class="learn-more-">
+                                <span class="link">Learn More <img src="assets/icons/content/carrotright.svg"></span>
+                              </div>
+                            </div>
+                          </div>
+                          <div class="coursel-cards-data col-4">
+                            <div class="inner-c-data index-management">
+                              <div class="img-block">
+                                <img src="assets/icons/content/carousel-index-manag.svg">
+                              </div>
+                              <div class="title">Index Management</div>
+                              <div class="desc_text">Documents and fields are manipulated to customize the data and results as per the business requirements</div>
+                              <div class="learn-more-">
+                                <span class="link">Learn More <img src="assets/icons/content/carrotright.svg"></span>
+                              </div>
+                            </div>
+                          </div>
+                          <div class="coursel-cards-data col-4">
+                            <div class="inner-c-data result-optimization">
+                              <div class="img-block">
+                                <img src="assets/icons/content/carousel-result-opt.svg">
+                              </div>
+                              <div class="title">Result Optimization</div>
+                              <div class="desc_text">Results are tuned based on relevance to continuously improve the search experience</div>
+                              <div class="learn-more-">
+                                <span class="link">Learn More <img src="assets/icons/content/carrotright.svg"></span>
+                              </div>
+                            </div>
+                          </div>
+                        </div>
+                    </div>
+                    <div class="carousel-item">
+                      <div class="row row-carousels">
+                        <div class="coursel-cards-data col-4">
+                          <div class="inner-c-data search-experience">
+                            <div class="img-block">
+                              <img src="assets/icons/content/carousel-index-manag.svg">
+                            </div>
+                            <div class="title">Search Experience</div>
+                            <div class="desc_text">Search experience is enhanced by defining the presentation of the search inteface and results</div>
+                            <div class="learn-more-">
+                              <span class="link">Learn More <img src="assets/icons/content/carrotright.svg"></span>
+                            </div>
+                          </div>
+                        </div>
+                        <div class="coursel-cards-data col-4">
+                          <div class="inner-c-data analytics">
+                            <div class="img-block">
+                              <img src="assets/icons/content/carousel-analytics.svg">
+                            </div>
+                            <div class="title">Analytics</div>
+                            <div class="desc_text">Measure the performance of your application by providing real-time interactive insights</div>
+                            <div class="learn-more-">
+                              <span class="link">Learn More <img src="assets/icons/content/carrotright.svg"></span>
+                            </div>
+                          </div>
+                        </div>
+                        <div class="coursel-cards-data col-4">
+                          <div class="inner-c-data experiments">
+                            <div class="img-block">
+                              <img src="assets/icons/content/carousel-data-inte.svg">
+                            </div>
+                            <div class="title">Experiments</div>
+                            <div class="desc_text">Multiple index & search configuration can be tested to pick the best one that fulfills business needs</div>
+                            <div class="learn-more-">
+                              <span class="link">Learn More <img src="assets/icons/content/carrotright.svg"></span>
+                            </div>
+                          </div>
+                        </div>
+                      </div>
+                    </div>
+                  </div>
+                  <a class="carousel-control-prev" href="#demo" data-slide="prev">
+                    <span class="carousel-control-prev-icon"></span>
+                  </a>
+                  <a class="carousel-control-next" href="#demo" data-slide="next">
+                    <span class="carousel-control-next-icon"></span>
+                  </a>
                 </div>
-                <div class="slide">
-                  <div class="box2"> This text is the content of the box. We have added a 50px padding, 20px margin and a 15px green border. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.</div>
-                </div>
-                <div class="slide">
-                  <div class="box3"> This text is the content of the box. We have added a 50px padding, 20px margin and a 15px green border. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.</div>
-                </div>
-                </div>
+              </ng-container>
               <div class="empty">No apps found that matches with {{searchApp}}</div>
-          </ng-container>
+            </ng-container>
         </div>          
       </div>
     </div>
