--- a/findly-builder/src/app/components/user-engagement/user-engagement.component.scss
+++ b/findly-builder/src/app/components/user-engagement/user-engagement.component.scss
@@ -289,6 +289,17 @@
             width: 16px;
             height: 16px;
             top: -7px;
+            outline: 0 !important;
+            &::after{
+                background-color: #fff !important;
+                display: none !important;
+            }
+            &:hover {
+                &::after{
+                    background-color: #fff !important;
+                    display: none !important;
+                }
+            }
         }
         .ng5-slider-selection {
             z-index: 2;
