FLY-3182 sub task done

--- a/findly-builder/src/app/components/apps-home/apps-home.html
+++ b/findly-builder/src/app/components/apps-home/apps-home.html
@@ -203,7 +203,7 @@
                 <img src="assets/icons/landing/welcome-slider.svg">
               </div>
               <div class="desc-text">SearchAssist helps you build a conversational search assistant that combines cognitive search and virtual assistant competencies. Powered with AI and Coversation UI, the search assistant can not only answer the search users' queries and but also perform tasks for them</div>
-              <button class="kr-sg-button-primary btn_lg" href="#createBoardingJourney" data-slide="next" (click)="currentPage=2">Tell me more</button>              
+              <button class="kr-sg-button-primary btn_lg" href="#createBoardingJourney" data-slide="next" (click)="currentPage=2;callMixPanel()">Tell me more</button>              
             </div>
           </div>
           <div class="carousel-item">
