--- a/findly-builder/src/app/components/facets/facets.component.html
+++ b/findly-builder/src/app/components/facets/facets.component.html
@@ -24,7 +24,7 @@
             </div>
         </div>
         <div class="header-sec m-0" [ngClass]="{ 'd-none' : selcectionObj.selectedCount}">
-            <div class="title">{{'facets.facets'| translate}}</div>
+            <div class="title">{{'facets.facets'| translate}}  <button (click)="openModal1()">New model</button></div>           
             <div class="d-flex align-items-center" *ngIf="!noItems || emptySearchResults">
                 <div class="kr-sg-input-search" [ngClass]="{'d-none': !showSearch}">
                     <input type="text" maxlength="60" placeholder="Search" id="inputSearch" class="input-search"  [ngClass]="{'pl-33':!searchfacet,'pl-2':searchfacet}" autocomplete="off" [(ngModel)]="searchfacet"  (mouseover)="searchImgSrc = (searchFocusIn ? 'assets/icons/search_gray.svg' :'assets/icons/search_gray_dark.svg')"
@@ -389,5 +389,21 @@
         <button type="button" class="kr-sg-button-secondary btn_lg float-right" (click)="closeModal()">{{'facets.cancel'| translate}}</button>
         <!-- <button type="button" class="kr-sg-button-danger btn_lg float-left" *ngIf="addEditFacetObj._id" (click)="deleteFacets(addEditFacetObj)">{{'facets.delete'| translate}}</button> -->
 
+    </div>
+</kr-modal>
+
+<!--new modal-->
+<kr-modal modalType="center" modalClass="modal_popups_ facetModalPouup" #facetModalPopupNew>
+    <div class="modal-header">
+        <div class="title">New Model</div>
+        <!-- <div class="title">{{'facets.add_facet'| translate}}</div> -->
+        <div class="close_icon" (click)="closeModal1()"><img id='btn_close_tab' src="assets/icons/modal-close.svg"></div>
+    </div>
+    <perfect-scrollbar class="perfect-scroll-modal-body" #perfectScroll>
+       <h1>New model</h1>
+    </perfect-scrollbar>
+    <div class="modal-footer">
+        <button type="button" class="kr-sg-button-primary btn_lg float-right">Save</button> <!-- [disabled]='(!addEditFacetObj._id && !selectedField) || !addEditFacetObj.facetName || (selectedField && (addEditFacetObj.fieldId !== selectedField.fieldId))' -->
+        <button type="button" class="kr-sg-button-secondary btn_lg float-right" (click)="closeModal1()">Cancel</button>
     </div>
 </kr-modal>
