--- a/findly-builder/src/app/components/app-menu/app-menu.component.html
+++ b/findly-builder/src/app/components/app-menu/app-menu.component.html
@@ -224,6 +224,16 @@
 					</span>
 					<span class="linkTitle">Result Templates </span>
 				</div>
+
+				<div mat-button class="mat-button" [routerLink]="['/resultTemplate']" skipLocationChange routerLinkActive="active" (click)="preview('index')" mat-button>
+					<span class="inlineIconBox">
+						<!-- <img src="assets/icons/sidemenu/new-icons/search-interface.svg" class="defaultIcon">
+						<img src="assets/icons/sidemenu/new-icons/search-interface.svg" class="activeIcon"> -->
+						<img src="assets/icons/sidemenu/new-icons/result-template.svg" class="defaultIcon">
+						<img src="assets/icons/sidemenu/new-icons/result-template.svg" class="activeIcon">
+					</span>
+					<span class="linkTitle">Result Templates_1 </span>
+				</div>
 			</div>
 
 		</div>
