--- a/findly-builder/src/app/scss/styles.scss
+++ b/findly-builder/src/app/scss/styles.scss
@@ -1307,6 +1307,7 @@ div.divBlockEmptylastChild:first-child {
         .label-text, .label_text{
             font-size: 12px;
             font-weight: 500;
+            margin-bottom: 4px;
         }
         .mb-20{
             margin-bottom: 20px;
