--- a/findly-builder/src/app/components/business-rules/business-rules.component.html
+++ b/findly-builder/src/app/components/business-rules/business-rules.component.html
@@ -21,7 +21,7 @@
         </div>
         <div class="col-8 right-sec p-0" *ngIf=" !(selcectionObj && selcectionObj.selectedItems && selcectionObj.selectedCount)">
             <div class="kr-sg-input-search" [ngClass]="{ 'd-none': !showSearch }">
-                <input type="text" placeholder="Search"  maxlength="60" id="inputSearch" class="input-search" (keyup)="searchByRule()" [ngClass]="{'pl-33':!searchRules,'pl-2':searchRules}" autocomplete="off" [(ngModel)]="searchRules" (mouseover)="searchImgSrc = (searchFocusIn ? 'assets/icons/search_gray.svg' :'assets/icons/search_gray_dark.svg')"
+                <input type="text" placeholder="Search"  maxlength="60" id="inputSearch" class="input-search" (keyup)="searchByRule()" [ngClass]="{'pl-33':!searchRules,'pl-2':searchRules}" autocomplete="off" [(ngModel)]="searchRules" (change)="filterRules(searchRules,'search')" (mouseover)="searchImgSrc = (searchFocusIn ? 'assets/icons/search_gray.svg' :'assets/icons/search_gray_dark.svg')"
                     (mouseout)="searchFocusIn=false;searchImgSrc = 'assets/icons/search_gray.svg'" (focus)="searchFocusIn=true;searchImgSrc = 'assets/icons/search_gray.svg'">
                 <img [src]="searchImgSrc" class="search-icon" *ngIf="!searchRules">
                 <img class="close-icon" src="assets/icons/close_icon.svg" [ngClass]="{'pr-22':searchRules}" (mouseover)="activeClose=true" (mouseout)="activeClose=false" (click)="focusoutSearch()">
@@ -74,9 +74,15 @@
                     <input id="selectAllRules" class="checkbox-custom" type="checkbox" (change)="selectAll()" [(ngModel)]="selcectionObj.selectAll" />
                     <label for="selectAllRules" class="checkbox-custom-label"></label>
                 </div> -->
-                <div class="title cursor-pointer" (click)="sortBy('ruleName')">
-                    <img *ngIf="!(selectedSort && selectedSort === 'ruleName')" src="assets/icons/sort_up_down.svg" class="pr-1" />
-                    <img *ngIf="selectedSort && selectedSort === 'ruleName'" [ngClass]="{ upArrow: !isAsc }" src="assets/icons/caretDown.svg" class="pr-1" /> {{ "name_caps" | translate }}
+                <div class=" d-flex align-items-center title cursor-pointer" >
+                    <span class="d-flex align-items-center flex-column mr-1">
+                        <img  (click)="sortRules('ruleName', 'down',1)" src="assets/icons/caretDown.svg" class="ml-1 sortImg downArrow">
+                        <img (click)="sortRules('ruleName', 'up',-1)" src="assets/icons/caretDown.svg" class="ml-1 sortImg upArrow">
+                      </span>
+                    
+                    <!-- <img  src="assets/icons/sort_up_down.svg" class="pr-1" />
+                    <img   src="assets/icons/caretDown.svg" class="pr-1" />  -->
+                    {{ "name_caps" | translate }}
                 </div>
             </div>
             <div class="col-3 content">
@@ -87,8 +93,10 @@
             </div>
             <div class="col-3 content cursor-pointer d-flex align-items-center" (click)="sortBy('isRuleActive')">
                 <span class="d-flex align-items-center flex-column mr-1">
-                <img *ngIf="!(selectedSort && selectedSort === 'isRuleActive')" src="assets/icons/sort_up_down.svg" class="pr-1" />
-                <img *ngIf="selectedSort && selectedSort === 'isRuleActive'" [ngClass]="{ upArrow: isAsc }" src="assets/icons/caretDown.svg" class="pr-1" /></span> {{ "businessRules.status_caps" | translate }}
+                    <img  (click)="sortRules('isRuleActive', 'down',1)" src="assets/icons/caretDown.svg" class="ml-1 sortImg downArrow">
+                    <img (click)="sortRules('isRuleActive', 'up',-1)" src="assets/icons/caretDown.svg" class="ml-1 sortImg upArrow">
+                  </span>
+                {{ "businessRules.status_caps" | translate }}
                 <div class="ml-2 kr-sg-dropdowns type_sort_dropdown" #isRuleActiveFilter="ngbDropdown" ngbDropdown [container]="'body'" [autoClose]="true" [placement]="'bottom-right'">
                     <div class="dropdown dropdown-open">
                         <button class="dropdown-toggle dropdown-input" ngbDropdownToggle (click)="$event.stopImmediatePropagation()">
@@ -111,7 +119,7 @@
     <perfect-scrollbar class="scroll_table">
         <!-- <div class="body_sec row m-0" *ngFor="let ruleObj of rules | filter: [searchRules, 'ruleName']" [ngClass]="{ -->
             <div class="body_sec row m-0" *ngFor="let ruleObj of rules" [ngClass]="{
-        selected:
+        'selected':
           selcectionObj &&
           selcectionObj.selectedItems &&
           selcectionObj.selectedItems[ruleObj._id]
