--- a/findly-builder/src/app/components/business-rules/business-rules.component.scss
+++ b/findly-builder/src/app/components/business-rules/business-rules.component.scss
@@ -155,9 +155,23 @@
             padding: 16px 0;
             box-shadow: inset 0px -1px 0px #E4E5E7;
             margin-right: 24px !important;
-            .upArrow {
-                transform: rotate(180deg) !important;
-            }
+            .sortImg{                                                       
+                position: static;
+                &.upArrow {
+                    transform: none !important;
+                }
+                &.downArrow {
+                    transform: rotate(180deg) !important;
+                    top: 1px !important;
+                    position: relative;
+                }
+                &.assending{
+                    transform: rotate(180deg);
+                }
+                &.decending{
+                    transform: rotate(0deg);
+                }
+            }  
             .content {
                 color: #9AA0A6;
                 font-weight: 500;
@@ -167,7 +181,7 @@
                 padding: 0 10px;
                 img {
                     position: relative;
-                    top: -1px;
+                    top: 2px;
                 }
                 &.withcheckbox {
                     display: flex;
