--- a/findly-builder/src/app/components/business-rules/business-rules.component.html
+++ b/findly-builder/src/app/components/business-rules/business-rules.component.html
@@ -21,7 +21,7 @@
         </div>
         <div class="col-8 right-sec p-0" *ngIf=" !(selcectionObj && selcectionObj.selectedItems && selcectionObj.selectedCount)">
             <div class="kr-sg-input-search" [ngClass]="{ 'd-none': !showSearch }">
-                <input type="text" placeholder="Search"  maxlength="60" id="inputSearch" class="input-search" (keyup)="searchByRule()" [ngClass]="{'pl-33':!searchRules,'pl-2':searchRules}" autocomplete="off" [(ngModel)]="searchRules" (change)="filterRules(searchRules,'search')" (mouseover)="searchImgSrc = (searchFocusIn ? 'assets/icons/search_gray.svg' :'assets/icons/search_gray_dark.svg')"
+                <input type="text" placeholder="Search"  maxlength="60" id="inputSearch" class="input-search" (keyup)="searchByRule()" [ngClass]="{'pl-33':!searchRules,'pl-2':searchRules}" autocomplete="off" [(ngModel)]="searchRules" (keyup)="filterRules(searchRules,'search')"  (mouseover)="searchImgSrc = (searchFocusIn ? 'assets/icons/search_gray.svg' :'assets/icons/search_gray_dark.svg')"
                     (mouseout)="searchFocusIn=false;searchImgSrc = 'assets/icons/search_gray.svg'" (focus)="searchFocusIn=true;searchImgSrc = 'assets/icons/search_gray.svg'">
                 <img [src]="searchImgSrc" class="search-icon" *ngIf="!searchRules">
                 <img class="close-icon" src="assets/icons/close_icon.svg" [ngClass]="{'pr-22':searchRules}" (mouseover)="activeClose=true" (mouseout)="activeClose=false" (click)="focusoutSearch()">
@@ -69,15 +69,15 @@
     </ng-container>
     <div class="table_section" *ngIf="(!loadingContent && rules && beforeFilterRules && beforeFilterRules.length) || searchRules || showSearch">
         <div class="header_sec row m-0">
-            <div class="col-3 content withcheckbox ">
+            <div class="col-3 content withcheckbox " (click)="sortByApi('ruleName')">
                 <!-- <div class="kr-sg-checkbox p-0 m-0">
                     <input id="selectAllRules" class="checkbox-custom" type="checkbox" (change)="selectAll()" [(ngModel)]="selcectionObj.selectAll" />
                     <label for="selectAllRules" class="checkbox-custom-label"></label>
                 </div> -->
                 <div class=" d-flex align-items-center title cursor-pointer" >
                     <span class="d-flex align-items-center flex-column mr-1">
-                        <img [ngClass]="getSortIconVisibility('ruleName', 'down')" (click)="sortRules('ruleName', 'down',1)" src="assets/icons/caretDown.svg" class="ml-1 sortImg downArrow">
-                        <img [ngClass]="getSortIconVisibility('ruleName', 'up')"(click)="sortRules('ruleName', 'up',-1)" src="assets/icons/caretDown.svg" class="ml-1 sortImg upArrow">
+                        <img [ngClass]="getSortIconVisibility('ruleName', 'down')"  src="assets/icons/caretDown.svg" class="ml-1 sortImg downArrow">
+                        <img [ngClass]="getSortIconVisibility('ruleName', 'up')" src="assets/icons/caretDown.svg" class="ml-1 sortImg upArrow">
                       </span>
                     
                     <!-- <img  src="assets/icons/sort_up_down.svg" class="pr-1" />
@@ -91,10 +91,10 @@
             <div class="col-3 content">
                 {{ "businessRules.outcome_caps" | translate }}
             </div>
-            <div class="col-3 content cursor-pointer d-flex align-items-center" (click)="sortBy('isRuleActive')">
+            <div class="col-3 content cursor-pointer d-flex align-items-center" (click)="sortByApi('isRuleActive')">
                 <span class="d-flex align-items-center flex-column mr-1">
-                    <img [ngClass]="getSortIconVisibility('isRuleActive', 'down')" (click)="sortRules('isRuleActive', 'down',1)" src="assets/icons/caretDown.svg" class="ml-1 sortImg downArrow">
-                    <img [ngClass]="getSortIconVisibility('isRuleActive', 'up')"(click)="sortRules('isRuleActive', 'up',-1)" src="assets/icons/caretDown.svg" class="ml-1 sortImg upArrow">
+                    <img [ngClass]="getSortIconVisibility('isRuleActive', 'down')"  src="assets/icons/caretDown.svg" class="ml-1 sortImg downArrow">
+                    <img [ngClass]="getSortIconVisibility('isRuleActive', 'up')" src="assets/icons/caretDown.svg" class="ml-1 sortImg upArrow">
                   </span>
                 {{ "businessRules.status_caps" | translate }}
                 <div class="ml-2 kr-sg-dropdowns type_sort_dropdown" #isRuleActiveFilter="ngbDropdown" ngbDropdown [container]="'body'" [autoClose]="true" [placement]="'bottom-right'">
