--- a/findly-builder/src/assets/web-kore-sdk/demo/findly/findly-sdk.css
+++ b/findly-builder/src/assets/web-kore-sdk/demo/findly/findly-sdk.css
@@ -7363,11 +7363,22 @@ body{
 .searchAssist-kore-chat-window.search-container.conversation .search-body .finalResults,.searchAssist-kore-chat-window.search-container.conversation .search-body .searchBox{
     margin: 20px;
 }
+.searchAssist-kore-chat-window.search-container.conversation .search-body .livesearchResultsNotFound{
+    text-align: center;
+    padding:112px 0px;
+    color: #9aa0a6;
+}
+.searchAssist-kore-chat-window.search-container.conversation #autoSuggestionContainer .suggestion-search-data-parent .noquerySuggestionsFound{
+text-align: center;
+padding:70px 0px;
+color: #9aa0a6;
+}
 .searchAssist-kore-chat-window.search-container.conversation .search-body{
     border-radius: 6px;
     background: #FFFFFF;
     margin: 5px;
     max-height: 250px;
+    /* min-height: 250px; */
     bottom: 0;
     position: relative;
     width: auto !important;
@@ -7375,7 +7386,7 @@ body{
     padding: 0px;
     height: auto;
     box-shadow: 0px 2px 5px rgba(32, 33, 36, 0.2);
-box-sizing:border-box;
+    box-sizing:border-box;
     /* max-height: calc(100% - 200px);
     width: 485px;
     padding: 30px 20px 50px 20px;
@@ -13793,6 +13804,7 @@ border: 0;
     border: 0;
     padding: 20px;
     max-height: 200px;
+    /* min-height: 200px; */
     overflow: auto;
     border-radius: 6px;
     background: #FFFFFF;
